# EOMM_Matchmaking_Rmxpvl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONVERSATION_RECAP.md  LICENSE  Makefile  README.md  README_DEMARCHE.md  calibrate_smurf_peak.py  stabilize_hardstuck.py  temp_patch.txt  test_3_sims  test_55_percent.c  test_eomm_auto_200games.c  test_full_eomm_200games.c  test_full_eomm_200games_final.c  test_normal_player_200games.c
backend/: README.md  api.py  app.py  main.py  matchmaking.py  requirements.txt  streamlit-app.py  streamlit_app.py
c_engine/include/: lol_champions.h  lol_tiers.h  matchmaking.h
c_engine/src/: main.c  match.h  matchmaking.c  mmr_engine.c  mmr_engine.h  player.c  player.h  simulator_structure.c
c_engine/tests/: test_matchmaking.c
docs/: ALGORITHM.md  CONVERSATION_RECAP.md  engine_structure.md
frontend/: app.py  requirements.txt
include/: eomm_system.h
src/: eomm_main.c  eomm_system.c
src/scripts/: analyze_match_history.py  analyze_missing_streaks.py  analyze_skill_level_ceiling.py  analyze_streaks.py  boost_smurf_wr.py  eomm_tools.py  final_analysis.py  final_eomm_report.py  final_smurf_tune.py  fix_hardstuck_blend.py  fix_hardstuck_final.py  fix_hardstuck_perf.py  fix_hardstuck_v2.py  (+15 more)
tests/: test_3_separate_simulations.c  test_50_games_detailed.c  test_autofill_system.c  test_coefficient_analysis.c  test_debug_autofill.c  test_eomm_season_realistic.c  test_full_eomm_200games_final.c  test_minimal_1_per_category.c  test_performance_stats.c  test_smurf_realistic_injection.c  test_smurf_realistic_injection.c.bak
